--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 		   	color: white;
 		   	height: 20px;
 		 	}
+		 	svg rec {
+		 		margin-right: 20px;
+		 	}
 		</style>
 		<title>Dashboard</title>
 		<base href="/">
 	</head>
 	<body ng-app="dashboard">
 		<div ng-view></div>
-
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 		<script>
@@ -33,6 +35,8 @@
 			}]);			
 		</script>
 		<script src="./indexctrl.js"></script>
+		<script src="./foodctrl.js"></script>
 		<script src="./simplechartdirective.js"></script>
+		<script src="./colchart.js"></script>
 	</body>
 </html>
